<resources>
    <string name="app_name">Localizer</string>
    <string name="facebook_app_id">453419798534653</string>
    <string name="fb_login_protocol_scheme">fb453419798534653</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_location_required">It\'s necessary the location to find your old person</string>
    <string name="msg_camera_required">È necessário a permissão da câmera para poder scaner o QR Code</string>
    <string name="msg_macaddress_bluetooth_null">Houve um erro ao conectar com o dispositivo, por favor escaneie o código novamente</string>
    <string name="salvar_caps">SALVAR</string>
    <string name="msg_escanear_dispositivo">Para visualizar a localização do dispositivo, é necessário escanear o QR Code que se encontra na parte de baixo do dispositivo.</string>
    <string name="nenhum_dispositivo_vinculado">Nenhum dispositivo vinculado!</string>
    <string name="escanear_caps">ESCANEAR</string>
    <string name="msg_blt_conectar">Clique no dispositivo a baixo para conectar</string>
    <string name="msg_deslize">Deslize para aumentar a area de segurança</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="msg_modal_btn_panic">Atenção! o Botão de emergência foi pressionado!</string>
    <string name="msg_modal_disconnected">Ops! a pulseira está desconectada</string>
    <string name="msg_modal_low_battery">Bateria está fraca, coloque a pulseira para carregar.</string>
    <string name="service_not_available">Serviço indisponível</string>
    <string name="invalid_lat_long_used">Localização inválida</string>
    <string name="no_address_found">Endereço não encontrado</string>
    <string name="address_found">Endereço encontrado</string>
    <string name="nome">Nome do usuário</string>
    <string name="celular">Celular de emergência</string>
    <string name="configuracoes">Configurações</string>
    <string name="msg_tela_inicial">Localize e monitore pessoas com nosso dispositivo.</string>
    <string name="msg_tela_inicial_2">Para continuar clique no botão de Login com o Facebook.</string>
</resources>
