<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:background="@color/newRed"
            android:id="@+id/modal_panic_btn"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:padding="16dp"
                android:text="@string/msg_modal_btn_panic"
                android:textColor="@android:color/background_light"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:padding="12dp"
                android:id="@+id/close_modal_panic_btn"
                app:srcCompat="@drawable/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
            android:background="@color/newYellow"
            android:id="@+id/modal_disconnected"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:padding="16dp"
                android:text="@string/msg_modal_disconnected"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:padding="12dp"
                android:id="@+id/close_modal_disconnected"
                app:srcCompat="@drawable/ic_close_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
            android:background="@color/newOrange"
            android:id="@+id/modal_low_battery"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textColor="@android:color/background_light"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="16dp"
                android:text="@string/msg_modal_low_battery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:padding="12dp"
                android:id="@+id/close_modal_low_battery"
                app:srcCompat="@drawable/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />


    </LinearLayout>

</LinearLayout>